[FIX] mail: fix meeting panel unreadable in light theme
Before this PR, .o-simulateDarkTheme is applied to the panel in meeting mode. This class inverts the text color, making it white on white.

This PR removes the class, which seems to have been applied by mistake.

task-6054300

--- a/addons/mail/static/src/discuss/core/common/notification_settings.scss
+++ b/addons/mail/static/src/discuss/core/common/notification_settings.scss
@@ -10,6 +10,10 @@
     .btn {
         &:hover, &.show {
             background-color: var(--mail-NotificationSettings-btnHoverBg, mix($gray-100, $gray-200));
+
+            .o-simulateDarkTheme & {
+                background-color: mix($gray-700, $gray-800);
+            }
         }
     }
 }
